# no-fastapi

./: .env-example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: build.yaml
.github/workflows/: build.yaml
locust/: Dockerfile  locustfile.py
src/: main.py  pytest.ini
src/alembic/: env.py
src/alembic/versions/: 39ce3dc5e758_address_and_style_change.py  55a77e9c781c_add_password.py  57294821020a_change_name.py  6354c2279afc_nullable_names_and_age_in_user.py  75ad48cbd66e_test.py  7f28156bf52a_nullable_password_for_google_auth.py  ab26936f6fb1_.py  c07a3b510ccc_initial.py
src/app/: celery.py  config.py  database.py  decorators.py  elastic.py  kafka_router.py  kafka_service.py  models.py  redis.py  schemas.py
src/dao/: base.py  diary.py  user.py
src/kafka_routers/: diary.py
src/models/: __init__.py  diary.py  user.py
src/routers/: auth.py  diary.py  users.py
src/schemas/requests/: auth.py  diary.py  user.py
src/schemas/responses/: diary.py  user.py
src/services/: kafka_service.py  oauth.py
src/services/clients/: google_client.py
src/services/dispatchers/kafka/: spiderweb_dispatcher.py
src/services/elastic_documents/: notes.py
src/tasks/: diary_indexing.py  test.py
src/tests/: conftest.py
src/tests/api/: conftest.py  test_user.py
src/utils/: crypto_utils.py
